fix: z-index for section dividers

--- a/src/blocks/blocks/section/style.scss
+++ b/src/blocks/blocks/section/style.scss
@@ -156,6 +156,10 @@ html[lang="ja"], html[lang="ko"], html[lang="zh"], html[lang="zh-Hans"], html[la
 			word-break: keep-all;
 			max-width: var( --columns-width );
 
+			&:not(:first-child, :last-child) {
+				z-index: 1; // If dividers are present, make sure they are behind the columns.
+			}
+
 			.wp-block-themeisle-blocks-advanced-column {
 				position: relative;
 
